--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,12 @@ idna==3.3
 outcome==1.2.0
 pycodestyle==2.9.0
 pycparser==2.21
+PyJWT==2.4.0
 pymongo==4.2.0
 pyOpenSSL==22.0.0
 PySocks==1.7.1
 python-dotenv==0.20.0
+pytz==2022.1
 requests==2.28.1
 schedule==1.1.0
 selenium==4.3.0
@@ -26,6 +28,7 @@ toml==0.10.2
 tqdm==4.64.0
 trio==0.21.0
 trio-websocket==0.9.2
+twilio==7.12.0
 urllib3==1.26.11
 webdriver-manager==3.8.3
 wsproto==1.1.0
